# imagick

./: .bazelrc  .gitignore  .travis.yml  README.md  Vagrantfile  WORKSPACE  download-build-imagemagick.sh  pixel-wand.patch  vagrant-dev-playbook.yml
imagick/: BUILD.bazel  magick_wand.go  magick_wand_test.go
libs/: BUILD.bazel
libs/include/magick/: magick-baseconfig.h  version.h
libs/include/wand/: pixel-wand.h
